<resources>
    <string name="app_name">GithubMini</string>
    <string name="name">Name</string>
    <string name="user_name">Username</string>
    <!--    <string name="username">Username</string>-->
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="repository">%s Repository</string>
    <string name="number">1234</string>
    <string name="search_hint">Masukkan kata</string>


    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="htmlurl">html url</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>